Exclude tarql module as it is not compatible with new jena version. - migrate reified statments api - use java.nio.file.Files